/******************************************************************************
 *                                                                            *
 *                    Copyright 2019 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package net;
option java_package = "com.sandpolis.core.proto.net";

import "com/sandpolis/core/proto/util/Platform.proto";

/**
 * Request client metadata.
 */
message RQ_ClientMetadata {
}

message RS_ClientMetadata {

	// The client's network hostname
	string hostname = 1;

	// The client user 
	string username = 2;
	
	// The OS family
	util.OsType os_type = 3;
	
	// The system architecture
	util.Architecture arch = 4;
}

message RQ_PowerChange {
	enum PowerChange {
		POWEROFF = 0;
		RESTART = 1;
	}
	
	PowerChange change = 1;
}