/*******************************************************************************
 *                                                                             *
 *                Copyright Â© 2015 - 2019 Subterranean Security                *
 *                                                                             *
 *  Licensed under the Apache License, Version 2.0 (the "License");            *
 *  you may not use this file except in compliance with the License.           *
 *  You may obtain a copy of the License at                                    *
 *                                                                             *
 *      http://www.apache.org/licenses/LICENSE-2.0                             *
 *                                                                             *
 *  Unless required by applicable law or agreed to in writing, software        *
 *  distributed under the License is distributed on an "AS IS" BASIS,          *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.   *
 *  See the License for the specific language governing permissions and        *
 *  limitations under the License.                                             *
 *                                                                             *
 ******************************************************************************/
syntax = "proto3";

package net;

option java_package = "com.sandpolis.plugin.shell.net";

enum Shell {
    // Microsoft PowerShell
    PWSH = 0;

    // Microsoft CMD.EXE
    CMD = 1;

    // Bourne Again Shell
    BASH = 2;
}

message RQ_Execute {
    Shell type = 1;
    string command = 2;
}

message RS_Execute {
    int32 exitCode = 1;
    string result = 2;
}

message RQ_ListShells {
}

message RS_ListShells {
    message ShellListing {
        Shell type = 1;
        string location = 2;
        string version = 3;
    }

    repeated ShellListing listing = 1;
}

message RQ_ShellStream {

    // The desired stream ID
    int32 id = 1;

    // The stream type
    Shell type = 2;

    // TODO request permissions
    // Permission permission = 3;

    map<string, string> environment = 4;
}

message EV_ShellStream {

    // The I/O data
    bytes data = 1;
}
